<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>
        <variable
            name="viewModel"
            type="com.rosemeire.deconti.bakehouse.viewModel.StepsViewModel"/>
        <variable
            name="eventHandler"
            type="java.lang.ref.WeakReference&lt;com.rosemeire.deconti.bakehouse.adapter.StepRecyclerViewAdapter.EventHandler&gt;" />
    </data>

    <LinearLayout

        android:id="@+id/step_container"
        android:background="@color/backgroundItemColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margins"
        android:gravity="center"
        android:onClick="@{() -> eventHandler.get().onItemClick(viewModel.step)}"
        android:orientation="horizontal"
        android:tag="@string/label_step_list">

        <TextView
            android:id="@+id/textViewId"
            style="@style/TextViewTitle"
            android:layout_width="40dp"
            android:text="@{viewModel.stepId}"
            tools:text="@string/label_id" />

        <TextView
            android:id="@+id/textViewDescription"
            style="@style/TextViewContent"
            android:text="@={viewModel.step.shortDescription}"
            tools:text="@string/label_description" />

    </LinearLayout>

</layout>