<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_recipe_layout">

    <TextView
        android:id="@+id/textView_widgetTitle"
        style="@style/TextViewTitle"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginLeft="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginRight="@dimen/margins"
        android:layout_marginBottom="@dimen/margins"
        android:background="@color/colorPrimary"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/linearLayout_widget"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView_widgetTitle"
        android:layout_margin="@dimen/margins"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/TextViewTitle"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:text="@string/msg_widget" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margins"
            android:background="@drawable/ic_bakehouse_icon"
            app:srcCompat="@drawable/ic_bakehouse_icon"
            android:contentDescription="@string/content_description_05" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView_widget"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView_widgetTitle"
        android:layout_margin="@dimen/margins"
        tools:listitem="@layout/widget_recipes_ingredient"/>

</RelativeLayout>