<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.rosemeire.deconti.bakehouse.userInterface.main.MainActivity">

    <data>
        <variable
            name="viewModel"
            type="com.rosemeire.deconti.bakehouse.viewModel.RecipesViewModel"/>

        <variable
             name="eventHandler"
             type="java.lang.ref.WeakReference&lt;com.rosemeire.deconti.bakehouse.adapter.RecipeRecyclerViewAdapter.EventHandler&gt;"/>
    </data>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_recipesItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margins"
        android:onClick="@{() -> eventHandler.get().onItemClick(viewModel.recipe)}"
        android:visibility="visible"
        app:cardUseCompatPadding="true"
        app:contentPadding="2dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_recipesItemPhoto"
                android:layout_width="160dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margins"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/content_description_04"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_bakehouse1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_recipesItemTitle" />

            <TextView
                android:id="@+id/textView_recipesItemTitle"
                style="@style/TextViewTitle"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@={viewModel.recipe.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/label_recipe" />

            <TextView
                android:id="@+id/textView_recipesItemIngredients"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_ingredients"
                app:layout_constraintStart_toEndOf="@+id/imageView_recipesItemPhoto"
                app:layout_constraintTop_toBottomOf="@+id/textView_recipesItemTitle"
                tools:text="@string/label_ingredients" />

            <TextView
                android:id="@+id/textView_recipesItemSteps"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_steps"
                app:layout_constraintStart_toEndOf="@+id/imageView_recipesItemPhoto"
                app:layout_constraintTop_toBottomOf="@+id/textView_recipesItemIngredients"
                tools:text="@string/label_steps" />

            <TextView
                android:id="@+id/textView_recipesItemServings"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_servings"
                app:layout_constraintStart_toEndOf="@+id/imageView_recipesItemPhoto"
                app:layout_constraintTop_toBottomOf="@+id/textView_recipesItemSteps"
                tools:text="@string/label_servings" />

            <TextView
                android:id="@+id/textView_recipesItemIngredientsValue"
                style="@style/TextViewQuantities"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@{viewModel.ingredientValue}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_recipesItemTitle"
                tools:text="@string/label_value" />

            <TextView
                android:id="@+id/textView_recipesItemStepsValues"
                style="@style/TextViewQuantities"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@{viewModel.stepsValue}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_recipesItemIngredientsValue"
                tools:text="@string/label_value" />

            <TextView
                android:id="@+id/textView_recipesItemServingValue"
                style="@style/TextViewQuantities"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@{viewModel.servingValue}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_recipesItemStepsValues"
                tools:text="@string/label_value" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>